Add title on page

--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -47,29 +47,25 @@
 -
     var secondMenu = [
         {
-            name: 'Разработка сайтов',
-            link: '#'
-        },
-        {
-            name: 'Поисковое продвижение',
-            link: '#'
-        },
-        {
-            name: 'Социальный маркетинг',
-            link: '#'
+            name: 'Продвижение сайта',
+            link: 'site-promotion.html'
         },
         {
             name: 'Контекстная реклама',
             link: '#'
         },
         {
-            name: 'Поддержка сайтов',
+            name: 'Таргетированная реклама',
             link: '#'
         },
         {
-            name: 'Веб-аналитика',
+            name: 'Маркетинг в соцсетях',
             link: '#'
-        }
+        },
+        {
+            name: 'Разработка и развитие сайтов',
+            link: '#'
+        },
     ]
 -
     var cities = [
