--- a/dev/static/styles/modules/modules.sass
+++ b/dev/static/styles/modules/modules.sass
@@ -4,3 +4,11 @@
 @import "header/header"
 @import "main-nav/main-nav"
 @import "popups/popups"
+
+
+// Page title h1
+.page-title
+    &__text
+        font-size: 110px
+        line-height: 125px
+        font-weight: 500
