Make first and second blocks for site promotion page

--- a/dev/static/styles/modules/modules.sass
+++ b/dev/static/styles/modules/modules.sass
@@ -1,5 +1,6 @@
 @import "buttons/buttons"
 @import "index/index"
+@import "page-blocks/page-blocks"
 @import "footer/footer"
 @import "header/header"
 @import "main-nav/main-nav"
