--- a/dev/pug/modules/header/header.pug
+++ b/dev/pug/modules/header/header.pug
@@ -4,7 +4,7 @@ header.b-header
     .wrapper
         ._top-line
             ._top-left
-                ._logo
+                a(href='/')._logo
                     +icon('logo', 'header__logo-icon')
                 ._showreel
                     a._link.link--icon(data-fancybox, href="https://youtu.be/I_l8eApu9G4&amp;autoplay=1&amp;rel=0&amp;controls=0&amp;showinfo=0")
