--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -102,3 +102,80 @@
             link: '#'
         },
     ]
+-
+    var tabsIndex = [
+        {
+            title: 'Поисковое продвижение',
+            text: '<p>Продвигаем по трафику, позициям и часам. Ставим, строим стратегию продвижения на полгода вперед.</p> <p><a class="taber__link" href="#" title="Поисковое продвижение">подробнее…</a></p>',
+        },
+        {
+            title: 'Контекстная реклама',
+            text: '<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur cum error illum ipsam iste laborum minima necessitatibus obcaecati quis quisquam repellendus sint temporibus totam veniam?</p> <p><a class="taber__link" href="#" title="Поисковое продвижение">подробнее…</a></p>',
+        },
+        {
+            title: 'Продвижение в соцсетях',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquid at blanditiis cumque enim, ipsum numquam possimus quis repudiandae? Aliquid animi dignissimos impedit ipsum nulla quae quis rem repellendus reprehenderit?</p>
+                    <p><a class="taber__link" href="#" title="Поисковое продвижение">подробнее…</a></p>`,
+        },
+        {
+            title: 'Разработка сайтов',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At autem commodi hic ipsam iste iure obcaecati omnis provident voluptatem? Facere reprehenderit, voluptate?</p>
+                    <p><a class="taber__link" href="#" title="Поисковое продвижение">подробнее…</a></p>`,
+        },
+        {
+            title: 'Поддержка сайтов',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt facere incidunt quibusdam rem repellendus voluptas?</p>
+                    <p><a class="taber__link" href="#" title="Поисковое продвижение">подробнее…</a></p>`,
+        },
+    ]
+-
+    var tabsPromo1 = [
+        {
+            title: 'Гибридное SEO',
+            text: `  <ul>
+                        <li>Собираем "длинный хвост". Получаем 50% трафика по НЧ запросов с "длинным хвостом", которые пользователи вводят крайне редко. Такой трафик наиболее конверсионный.</li>
+                        <li>Изучаем потенциал ключевых слов. Аналитики определяют перспективные по конверсии запросы и ставят их в приоритет продвижение по позициям.</li>
+                        <li>Используем карту релевантости. Позиционное ядро распределяем на кластеры запросов по целевым страницам, проработка которых повышает отдачу от SEO.</li>
+                      </ul>`,
+        },
+        {
+            title: 'Продвижение в регионах',
+            text: `  <ul>
+                        <li>Изучаем потенциал ключевых слов. Аналитики определяют перспективные по конверсии запросы и ставят их в приоритет продвижение по позициям.</li>
+                        <li>Используем карту релевантости. Позиционное ядро распределяем на кластеры запросов по целевым страницам, проработка которых повышает отдачу от SEO.</li>
+                        <li>Собираем "длинный хвост". Получаем 50% трафика по НЧ запросов с "длинным хвостом", которые пользователи вводят крайне редко. Такой трафик наиболее конверсионный.</li>
+                      </ul>`,
+        },
+        {
+            title: 'Продвижение в Москве',
+            text: `  <ul>
+                        <li>Используем карту релевантости. Позиционное ядро распределяем на кластеры запросов по целевым страницам, проработка которых повышает отдачу от SEO.</li>
+                        <li>Собираем "длинный хвост". Получаем 50% трафика по НЧ запросов с "длинным хвостом", которые пользователи вводят крайне редко. Такой трафик наиболее конверсионный.</li>
+                        <li>Изучаем потенциал ключевых слов. Аналитики определяют перспективные по конверсии запросы и ставят их в приоритет продвижение по позициям.</li>
+                      </ul>`,
+        },
+        {
+            title: 'Продвижение по РФ',
+            text: `  <ul>
+                        <li>Изучаем потенциал ключевых слов. Аналитики определяют перспективные по конверсии запросы и ставят их в приоритет продвижение по позициям.</li>
+                        <li>Собираем "длинный хвост". Получаем 50% трафика по НЧ запросов с "длинным хвостом", которые пользователи вводят крайне редко. Такой трафик наиболее конверсионный.</li>
+                        <li>Используем карту релевантости. Позиционное ядро распределяем на кластеры запросов по целевым страницам, проработка которых повышает отдачу от SEO.</li>
+                      </ul>`,
+        },
+        {
+            title: 'SEO на этапе разработки',
+            text: `  <ul>
+                        <li>Изучаем потенциал ключевых слов. Аналитики определяют перспективные по конверсии запросы и ставят их в приоритет продвижение по позициям.</li>
+                        <li>Собираем "длинный хвост". Получаем 50% трафика по НЧ запросов с "длинным хвостом", которые пользователи вводят крайне редко. Такой трафик наиболее конверсионный.</li>
+                        <li>Используем карту релевантости. Позиционное ядро распределяем на кластеры запросов по целевым страницам, проработка которых повышает отдачу от SEO.</li>
+                      </ul>`,
+        },
+        {
+            title: 'SEO поддержка',
+            text: `  <ul>
+                        <li>Собираем "длинный хвост". Получаем 50% трафика по НЧ запросов с "длинным хвостом", которые пользователи вводят крайне редко. Такой трафик наиболее конверсионный.</li>
+                        <li>Используем карту релевантости. Позиционное ядро распределяем на кластеры запросов по целевым страницам, проработка которых повышает отдачу от SEO.</li>
+                        <li>Изучаем потенциал ключевых слов. Аналитики определяют перспективные по конверсии запросы и ставят их в приоритет продвижение по позициям.</li>
+                      </ul>`,
+        },
+    ]
