--- a/dev/pug/utils/mixins.pug
+++ b/dev/pug/utils/mixins.pug
@@ -1,7 +1,22 @@
 mixin icon(name,mod)
-	if(mod)
-		svg(class="svg-sprite-icon icon-" + name + ' ' + mod)
-			use(xlink:href="images/svg/symbol/sprite.svg#" + name)
-	else
-		svg(class="svg-sprite-icon icon-" + name)
-			use(xlink:href="images/svg/symbol/sprite.svg#" + name)
+    if(mod)
+        svg(class="svg-sprite-icon icon-" + name + ' ' + mod)
+            use(xlink:href="images/svg/symbol/sprite.svg#" + name)
+    else
+        svg(class="svg-sprite-icon icon-" + name)
+            use(xlink:href="images/svg/symbol/sprite.svg#" + name)
+
+mixin taber(tabs, light)
+    section.section
+        .b-taber(class= light ? 'taber--light' : '')
+            ._left
+                ul._title-items
+                    each item, index in tabs
+                        li(data-target="tab-num-" + (index + 1), class= index === 0 ? 'active' : '')._title-item
+                            p._title= item.title
+            ._right
+                ul._cards
+                    each item, index in tabs
+                        - var text = item.text
+                        div(id="tab-num-" + (index + 1), class= index === 0 ? 'active' : '')._card
+                            | !{text}
