Styling topcases section

--- a/dev/pug/site-promotion.pug
+++ b/dev/pug/site-promotion.pug
@@ -9,3 +9,5 @@ block content
     include modules/badges
     include modules/focus
     +taber(tabsPromo1, true)
+    include modules/topcases
+    include pages/index/feedback
