--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -179,3 +179,77 @@
                       </ul>`,
         },
     ]
+
+-
+    var topCases = [
+        {
+            name: 'Чикен-пицца',
+            link: '#',
+            text: 'Проведем анализ вашей аудитории, поймем чего хочет ваш потребитель. Сегментируем аудитории на конкретных персонажей, пропишем сценарии для них, чтобы более точно коммуницировать с потребителями и как следствие более эффективно решать поставленные бизнес-задачи.',
+            images: [
+                'images/content/chicken.jpg',
+                // 'images/content/chicken.jpg',
+            ],
+            cols: [
+                {
+                    num: '+165',
+                    desc: 'заявок в месяц с рекламного траффика',
+                },
+                {
+                    num: '41,30 ₽',
+                    desc: 'стоимость заявки',
+                },
+            ],
+        },
+        {
+            name: 'Дом.ру',
+            link: '#',
+            text: 'Проведем анализ вашей аудитории, поймем чего хочет ваш потребитель. Сегментируем аудитории на конкретных персонажей, пропишем сценарии для них, чтобы более точно коммуницировать с потребителями и как следствие более эффективно решать поставленные бизнес-задачи.',
+            images: [
+                'images/content/chicken.jpg',
+            ],
+            cols: [
+                {
+                    num: '+97',
+                    desc: 'заявок в сегменте B2B',
+                },
+            ],
+        },
+        {
+            name: 'Амкадор',
+            link: '#',
+            text: 'Проведем анализ вашей аудитории, поймем чего хочет ваш потребитель. Сегментируем аудитории на конкретных персонажей, пропишем сценарии для них, чтобы более точно коммуницировать с потребителями и как следствие более эффективно решать поставленные бизнес-задачи.',
+            images: [
+                'images/content/chicken.jpg',
+            ],
+            cols: [
+                {
+                    num: '113',
+                    desc: 'столов было забронировано онлайн в 1-й месяц',
+                },
+                {
+                    num: '110',
+                    desc: 'заказов доставки с сайта в первый месяц',
+                },
+            ],
+        },
+        {
+            name: 'Lovit))',
+            link: '#',
+            text: 'Поймем чего хочет ваш потребитель. Сегментируем аудитории на конкретных персонажей, пропишем сценарии для них, чтобы более точно коммуницировать с потребителями и как следствие более эффективно решать поставленные бизнес-задачи.',
+            images: [
+                'images/content/chicken.jpg',
+                // 'images/content/chicken.jpg',
+            ],
+            cols: [
+                {
+                    num: '+110',
+                    desc: 'заявка в месяц с поискового траффика',
+                },
+                {
+                    num: '196 ₽',
+                    desc: 'стоимость заявки',
+                },
+            ],
+        },
+    ]
