--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -188,7 +188,7 @@
             text: 'Проведем анализ вашей аудитории, поймем чего хочет ваш потребитель. Сегментируем аудитории на конкретных персонажей, пропишем сценарии для них, чтобы более точно коммуницировать с потребителями и как следствие более эффективно решать поставленные бизнес-задачи.',
             images: [
                 'images/content/chicken.jpg',
-                // 'images/content/chicken.jpg',
+                'images/content/chicken.jpg',
             ],
             cols: [
                 {
@@ -239,7 +239,7 @@
             text: 'Поймем чего хочет ваш потребитель. Сегментируем аудитории на конкретных персонажей, пропишем сценарии для них, чтобы более точно коммуницировать с потребителями и как следствие более эффективно решать поставленные бизнес-задачи.',
             images: [
                 'images/content/chicken.jpg',
-                // 'images/content/chicken.jpg',
+                'images/content/chicken.jpg',
             ],
             cols: [
                 {
