--- a/dev/static/styles/modules/topcases.sass
+++ b/dev/static/styles/modules/topcases.sass
@@ -56,21 +56,20 @@
 
 .topcases-card--active
     display: flex
+    justify-content: space-between
     opacity: 1
 
 .topcases-card__left
-    flex: 2
-    padding-right: 24px
+    width: 64%
 
 .topcases-card__right
-    flex: 1
+    width: 32%
     display: flex
     flex-direction: column
     align-items: center
-    padding-left: 24px
 
 .topcases-card__images
-    display: flex
+
 
 .topcases-card__text
     margin-bottom: 40px
