Add autor video section

--- a/dev/pug/site-promotion.pug
+++ b/dev/pug/site-promotion.pug
@@ -11,3 +11,4 @@ block content
     +taber(tabsPromo1, true)
     include modules/topcases
     include pages/index/feedback
+    include pages/site-promotion/autor-video
