--- a/dev/static/styles/modules/topcases.sass
+++ b/dev/static/styles/modules/topcases.sass
@@ -9,7 +9,7 @@
 
 .topcases-tab
     padding-bottom: 20px
-    transition: all .3s
+    //transition: all .3s
 
 .topcases-tab--active
     color: $white
@@ -52,7 +52,6 @@
     background-color: $accent
     opacity: 0
     transition: all .3s
-    transition-delay: .3s
 
 .topcases-card--active
     display: flex
