Add light taber

--- a/dev/pug/site-promotion.pug
+++ b/dev/pug/site-promotion.pug
@@ -8,7 +8,8 @@ block content
     include modules/page-title
     include modules/badges
     include modules/focus
-    +taber(tabsPromo1, true)
+    +taber(tabsPromo1)
     include modules/topcases
     include pages/index/feedback
     include pages/site-promotion/autor-video
+    +taber(tabsStrategy, 'Стратегия поискового продвижения', 'light')
