--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -179,6 +179,37 @@
                       </ul>`,
         },
     ]
+-
+    var tabsStrategy = [
+        {
+            title: 'Анализ ЦА',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dolore doloremque itaque magni placeat, possimus ratione repudiandae sequi!</p>`,
+        },
+        {
+            title: 'Сезонность и спрос',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos dolore eius neque possimus quis, ullam ut voluptatem?</p>`,
+        },
+        {
+            title: 'Анализ продуктов',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur deserunt dolorum id modi quisquam similique!</p>`,
+        },
+        {
+            title: 'Технический анализ',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit perferendis repudiandae saepe.</p>`,
+        },
+        {
+            title: 'Поведенческий анализ',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque eveniet, ex iusto molestias saepe sed.</p>`,
+        },
+        {
+            title: 'Прогнозы и сроки',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, tenetur!</p>`,
+        },
+        {
+            title: 'Отчетность',
+            text: `<p>Передача сайта заказчику (перенос на отдельный хостинг), обучение работе с системой управления сайта (CMS) и дальнейшая техническая поддержка.</p>`,
+        },
+    ]
 
 -
     var topCases = [
