Change topcases styles

--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -6,7 +6,8 @@ block variables
 block content
     include pages/index/hero
     +taber(tabsIndex)
-    include pages/index/cases
+    //include pages/index/cases
+    include modules/topcases
     include pages/index/showreel
     include pages/index/counters
     include pages/index/clients
