--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -214,22 +214,19 @@
 -
     var topCases = [
         {
-            name: 'Чикен-пицца',
+            name: 'МСК Групп',
             link: '#',
-            text: 'Проведем анализ вашей аудитории, поймем чего хочет ваш потребитель. Сегментируем аудитории на конкретных персонажей, пропишем сценарии для них, чтобы более точно коммуницировать с потребителями и как следствие более эффективно решать поставленные бизнес-задачи.',
+            text: 'Domino’s Pizza — крупнейшая в мире сеть пиццерий. Требовалось повысить видимость в поисковых системах в сегменте доставки еды и увеличить число онлайн-продаж. ',
             images: [
-                'images/content/chicken.jpg',
-                'images/content/chicken.jpg',
+                'images/content/msk-group.jpg',
+                'images/content/msk-group.jpg',
             ],
             cols: [
                 {
-                    num: '+165',
-                    desc: 'заявок в месяц с рекламного траффика',
+                    num: '+812%',
+                    desc: 'прирост количества <br>заявок',
                 },
-                {
-                    num: '41,30 ₽',
-                    desc: 'стоимость заявки',
-                },
+
             ],
         },
         {
@@ -242,7 +239,7 @@
             cols: [
                 {
                     num: '+97',
-                    desc: 'заявок в сегменте B2B',
+                    desc: 'заявок <br>в сегменте B2B',
                 },
             ],
         },
@@ -264,23 +261,5 @@
                 },
             ],
         },
-        {
-            name: 'Lovit))',
-            link: '#',
-            text: 'Поймем чего хочет ваш потребитель. Сегментируем аудитории на конкретных персонажей, пропишем сценарии для них, чтобы более точно коммуницировать с потребителями и как следствие более эффективно решать поставленные бизнес-задачи.',
-            images: [
-                'images/content/chicken.jpg',
-                'images/content/chicken.jpg',
-            ],
-            cols: [
-                {
-                    num: '+110',
-                    desc: 'заявка в месяц с поискового траффика',
-                },
-                {
-                    num: '196 ₽',
-                    desc: 'стоимость заявки',
-                },
-            ],
-        },
+
     ]
