--- a/dev/static/styles/modules/index/showreel.sass
+++ b/dev/static/styles/modules/index/showreel.sass
@@ -5,6 +5,7 @@
         background-size: cover
         background-position: center center
         padding: 74px 58px
+        min-height: 553px
         align-items: center
         +row-flex()
         +sm-block()
