Clients slider add

--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -263,3 +263,48 @@
         },
 
     ]
+
+-
+    var clients = [
+        {
+            src: 'images/content/clients/lovit.png',
+            alt: 'lovit))'
+        },
+        {
+            src: 'images/content/clients/fujida.png',
+            alt: 'Fujida'
+        },
+        {
+            src: 'images/content/clients/domru.png',
+            alt: 'Дом.ру (БКС)'
+        },
+        {
+            src: 'images/content/clients/amkodor.png',
+            alt: 'Амкадор'
+        },
+        {
+            src: 'images/content/clients/2gis.png',
+            alt: '2Gis'
+        },
+        {
+            src: 'images/content/clients/amam.png',
+            alt: 'Ам-Ам'
+        },
+        {
+            src: 'images/content/clients/terfit.png',
+            alt: 'Территория фитнеса'
+        },
+        {
+            src: 'images/content/clients/ohotno.png',
+            alt: 'Охотно'
+        },
+        {
+            src: 'images/content/clients/tele2.png',
+            alt: 'Tele 2'
+        },
+        {
+            src: 'images/content/clients/mebgrad.png',
+            alt: 'Мебельград'
+        },
+
+    ]
