--- a/dev/pug/pages/index/clients.pug
+++ b/dev/pug/pages/index/clients.pug
@@ -1,89 +1,3 @@
--
-    let clients = [
-        {
-            src: 'images/content/partners/biolita.png',
-            alt: 'Biolita.'
-        },
-        {
-            src: 'images/content/partners/avgustin.png',
-            alt: 'Августин.'
-        },
-        {
-            src: 'images/content/partners/queen.png',
-            alt: 'Квин Тур.'
-        },
-        {
-            src: 'images/content/partners/master-disa.png',
-            alt: 'Оконный мастер диса.'
-        },
-        {
-            src: 'images/content/partners/auto-market.png',
-            alt: 'Авто маркет.'
-        },
-        {
-            src: 'images/content/partners/2gis.png',
-            alt: '2ГИС.'
-        },
-        {
-            src: 'images/content/partners/sps.png',
-            alt: 'Строй Полимер Сервис.'
-        },
-        {
-            src: 'images/content/partners/chicken.png',
-            alt: 'Чикен Пицца.'
-        },
-        {
-            src: 'images/content/partners/mc.png',
-            alt: 'Модная Цирюльня.'
-        },
-        {
-            src: 'images/content/partners/vak.png',
-            alt: 'Всеросийский азербайджанский конгресс.'
-        },
-        {
-            src: 'images/content/partners/shuvalov.png',
-            alt: 'Шувалов.'
-        },
-        {
-            src: 'images/content/partners/bks.png',
-            alt: 'Брянские Кабельные Сети.'
-        },
-        {
-            src: 'images/content/partners/flats-line.png',
-            alt: 'Flats-Line.'
-        },
-        {
-            src: 'images/content/partners/tele2.png',
-            alt: 'TELE2.'
-        },
-        {
-            src: 'images/content/partners/prime-medical.png',
-            alt: 'Прайм Медикал.'
-        },
-        {
-            src: 'images/content/partners/baz.png',
-            alt: 'Брянский Автомобильный Завод.'
-        },
-        {
-            src: 'images/content/partners/bryansk-les.png',
-            alt: 'Брянский лес.'
-        },
-        {
-            src: 'images/content/partners/human-right.png',
-            alt: 'Уполномоченный по правам человека в российской федерации.'
-        },
-        {
-            src: 'images/content/partners/raduga-okon.png',
-            alt: 'Радуга окон.'
-        },
-        {
-            src: 'images/content/partners/fk32.ru-gray.png',
-            alt: 'Фабрика кухня.',
-            style: 'width: 70px;'
-        },
-    ]
-
-
 // Clients
 section.section
     .b-clients
@@ -95,7 +9,7 @@ section.section
                         0.50 0 0 0 0.50 \
                         0    0 0 1 0')
         h2.h2._title Клиенты
-        ._list
+        ._list.owl-carousel
             each client in clients
                 ._item
                     img(src= client.src, alt= client.alt, style= client.style ? client.style : '')._img
