Feedback rules slider

--- a/dev/pug/site-promotion.pug
+++ b/dev/pug/site-promotion.pug
@@ -10,6 +10,7 @@ block content
     include modules/focus
     +taber(tabsPromo1)
     include modules/topcases
-    include pages/index/feedback
+    +feedbackSlider(feedbacks, 'Отзывы')
     include pages/site-promotion/autor-video
     +taber(tabsStrategy, 'Стратегия поискового продвижения', 'light')
+    +feedbackSlider(ourRules, 'Наш подход', 'feedback--rules')
