--- a/dev/pug/utils/mixins.pug
+++ b/dev/pug/utils/mixins.pug
@@ -61,3 +61,30 @@ mixin feedbackSlider (title, feedbacks, mod)
                         ._next
                             button.b-btn.-round._btn
                                 +icon('arrow', 'btn__icon-arrow')
+
+mixin feedbackSlider(arr, title, mod)
+    section.section
+        .b-feedback
+            h2.h2._title= title
+            ._wrap(class= mod || mod)
+                ._desc
+                    .feedback-carousel.owl-carousel
+                        each item in arr
+                            ._item
+                                ._item-left
+                                    ._name= item.name
+                                    if !mod
+                                        +icon('quotes', 'feedback__icon-quotes')
+                                ._item-right
+                                    ._text= item.text
+                                    if item.original
+                                        a(href= item.original, title="Оригинал отзыва " + item.name)._original Смотреть оригинал
+                ._controls
+                    ._counter
+                    ._navigation
+                        ._prev
+                            button.b-btn.-round._btn
+                                +icon('arrow-left', 'btn__icon-arrow btn__icon-arrow-left')
+                        ._next
+                            button.b-btn.-round._btn
+                                +icon('arrow', 'btn__icon-arrow')
