--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -11,6 +11,6 @@ block content
     include pages/index/showreel
     include pages/index/counters
     include pages/index/clients
-    include pages/index/feedback
+    +feedbackSlider(feedbacks, 'Отзывы')
     include pages/index/latest-post
     include pages/index/hr
