--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -308,3 +308,54 @@
         },
 
     ]
+
+-
+    var feedbacks = [
+        {
+            name: 'ООО «Дейта-Сервис»',
+            text: 'ООО «Дейта-Сервис» благодарит Вас за разработку и сопровождение сайтов нашей компании. В ходе сотрудничества с компанией «ITC MEDIA» мы получили качественный продукт, помогающий нам в поиске новых клиентов и возможностей для развития бизнеса.',
+        },
+        {
+            name: 'АО «ЭР-Телеком Холдинг»',
+            text: 'АО "ЭР-Телеком Холдинг" благодарит компанию ITC MEDIA за плодотворное сотрудничество по поисковому продвижению и технической поддержке сайтов bks.tv и bstk.bks.tv. Сотрудники ITC MEDIA проявляют себя как профессиональная команда.',
+            original: 'images/content/feedback/bks.jpg',
+        },
+        {
+            name: 'ООО «Семейный доктор»',
+            text: 'Искренне признательны за добросовестное отношение, подбор и внедрение оптимальных решений по визуализации составляющей и процессу поискового продвижения сайта.',
+            original: 'images/content/feedback/doctor.png',
+        },
+        {
+            name: 'ООО «Дятьковская Стекольная Артель»',
+            text: 'ООО Дятьковская Стекольная Артель (изготовление и продажа изделий из хрусталя и стекла) выражает свою благодарность ООО «ITC-MEDIA» Которая показала высокий уровень мастерства в разработке, создании и продвижении сайта.',
+        },
+        {
+            name: 'ООО «Клиника «Прайм Медикал»',
+            text: 'Руководство и коллектив ООО «Клиника «Прайм Медикал» благодарит компанию ITC Media за плодотворное сотрудничество в сфере продвижения и оптимизации сайта нашей компании.',
+        },
+    ]
+
+
+-
+    var ourRules = [
+        {
+            name: 'Взаимодействие с пользователем',
+            text: 'Контент — король. Визуальный слой — декорация сильного смысла, который продуман и выявлен с помощью маркетинговой аналитики.',
+        },
+        {
+            name: 'Маркетинг в основе',
+            text: 'АО "ЭР-Телеком Холдинг" благодарит компанию ITC MEDIA за плодотворное сотрудничество по поисковому продвижению и технической поддержке сайтов bks.tv и bstk.bks.tv. Сотрудники ITC MEDIA проявляют себя как профессиональная команда.',
+        },
+        {
+            name: 'Взаимодействие с пользователем 3',
+            text: 'Искренне признательны за добросовестное отношение, подбор и внедрение оптимальных решений по визуализации составляющей и процессу поискового продвижения сайта.',
+        },
+        {
+            name: 'Взаимодействие с пользователем 4',
+            text: 'ООО Дятьковская Стекольная Артель (изготовление и продажа изделий из хрусталя и стекла) выражает свою благодарность ООО «ITC-MEDIA» Которая показала высокий уровень мастерства в разработке, создании и продвижении сайта.',
+        },
+        {
+            name: 'Взаимодействие с пользователем 5',
+            text: 'Руководство и коллектив ООО «Клиника «Прайм Медикал» благодарит компанию ITC Media за плодотворное сотрудничество в сфере продвижения и оптимизации сайта нашей компании.',
+        },
+    ]
