Add blue form section

--- a/dev/pug/site-promotion.pug
+++ b/dev/pug/site-promotion.pug
@@ -14,3 +14,4 @@ block content
     include pages/site-promotion/autor-video
     +taber(tabsStrategy, 'Стратегия поискового продвижения', 'light')
     +feedbackSlider(ourRules, 'Наш подход', 'feedback--rules')
+    include modules/consult-form
