--- a/dev/static/styles/modules/modules.sass
+++ b/dev/static/styles/modules/modules.sass
@@ -110,3 +110,17 @@
     &__step
         &:not(:last-child)
             margin-bottom: 10px
+
+// Consult form
+.consult-form
+    padding-bottom: 60px
+    &__desc
+        max-width: 380px
+    &__approwe
+        max-width: 570px
+        color: rgba($white, .5)
+        &-link
+            color: $white
+            text-decoration: none
+            &:hover, &:focus
+                text-decoration: underline
