--- a/dev/static/styles/styles.sass
+++ b/dev/static/styles/styles.sass
@@ -115,6 +115,11 @@ button
 .section
     padding-top: 40px
     padding-bottom: 40px
+    &--blue
+        background-color: $accent
+        color: $white
+        padding-right: 30px
+        padding-left: 30px
     +xs-block()
         padding-top: 20px
         padding-bottom: 20px
@@ -130,6 +135,18 @@ button
         line-height: 40px
         margin-bottom: 20px
 
+.h3
+    font-size: 40px
+    line-height: 55px
+    font-weight: 200
+    font-style: normal
+    margin-bottom: 30px
+    +xs-block()
+        font-size: 30px
+        line-height: 35px
+        margin-bottom: 20px
+
+
 .hidden
     overflow: hidden
     height: 0
@@ -144,5 +161,21 @@ button
     +sm-block()
         display: flex !important
 
+.page-form
+    padding-top: 40px
+    padding-bottom: 40px
+    &__input
+        padding-right: 30px
+        padding-left: 30px
+    &__line
+        display: flex
+        & > *
+            flex: 1
+            &:not(:last-child)
+                margin-right: 50px
+    &__col-wrap
+        display: flex
+        justify-content: center
+        align-items: center
 //Модули
 @import 'modules/modules'
