Add contacts-page (not logic)

--- a/dev/pug/modules/footer/footer.pug
+++ b/dev/pug/modules/footer/footer.pug
@@ -18,7 +18,7 @@ footer.b-footer
         +icon('close', 'popup__icon-close')
     #consultation.consultation
         h4.h4._title Свяжитесь с нами
-        form._form
+        form.b-contacts-form._form
             textarea(placeholder='Опишите идею или ситуацию', name='message')._textarea
             input(type='text' name='user-name', placeholder='Имя')._input
             input(type='tel' name='user-phone', placeholder='Телефон')._input.-phone
