--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -41,7 +41,7 @@
         },
         {
             name: 'Контакты',
-            link: '#'
+            link: 'contacts.html'
         },
     ]
 -
