--- a/dev/static/styles/modules/popups/popups.sass
+++ b/dev/static/styles/modules/popups/popups.sass
@@ -49,74 +49,7 @@
         display: flex
         flex-direction: column
         max-width: 600px
-
-    &__input, &__textarea
-        background-color: $grey
-        width: 100%
-        padding-left: 30px
-        padding-right: 30px
-        border: none
-        margin-bottom: 20px
-        +xs-block()
-            font-size: 16px
-            line-height: 24px
-            padding-right: 13px
-            padding-left: 13px
-        &:focus
-            outline: none
-
-    &__textarea
-        height: 135px
-        padding-top: 15px
-        padding-bottom: 15px
-
-    &__input
-        height: 48px
-        +xs-block()
-            height: 45px
-
-    &__checkbox
-        opacity: 0
-        height: 0
-        overflow: hidden
-        &:checked
-            & + label
-                &::before
-                    background-color: $accent
-                &::after
-                    display: inline-block
-                    position: absolute
-                    content: url('../images/general/done.png')
-                    top: 7px
-                    left: 5px
-                    width: 19px
-                    height: 14px
-
-
-    &__label
-        padding-left: 40px
-        position: relative
-        font-size: 15px
-        line-height: 22px
-        font-weight: 100
-        margin-bottom: 20px
-        +xs-block()
-            font-size: 13px
-            line-height: 17px
-
-        &::before
-            position: absolute
-            content: ''
-            display: inline-block
-            width: 30px
-            height: 30px
-            left: 0
-            top: 0
-            border: 1px solid $accent
-            transition: all .3s ease
-
-    &__btn
-        align-self: flex-start
-        +xs-block()
-            align-self: stretch
-
+        &.contacts-form
+            .contacts-form
+                &__input, &__textarea
+                    background-color: $grey
