--- a/dev/pug/pages/contacts/contacts.pug
+++ b/dev/pug/pages/contacts/contacts.pug
@@ -33,12 +33,13 @@ section.section
                 input(type='checkbox', id='consultation-approve', name='approve' checked)._checkbox
                 label(for='consultation-approve')._label Даю согласие на обработку своих персональных данных и соглашаюсь с политикой конфиденциальности
                 input(type='submit', value='Отправить').b-btn.-flat._btn
-        ._right
+        ._right.mobile-none
             ._map-wrap.-active(data-city='Брянск')
                 div(style='position:relative;overflow:hidden;')
                     a(href='https://yandex.ru/maps/191/bryansk/?utm_medium=mapframe&utm_source=maps', style='color:#eee;font-size:12px;position:absolute;top:0px;') Брянск
-                    a(href='https://yandex.ru/maps/191/bryansk/house/bezhitskaya_ulitsa_54/Z00YdQNpQEYEQFtpfX52cn5hYg==/?ll=34.349533%2C53.273067&utm_medium=mapframe&utm_source=maps&z=17.53', style='color:#eee;font-size:12px;position:absolute;top:14px;') Бежицкая улица, 54 — Яндекс.Карты
-                    iframe(src='https://yandex.ru/map-widget/v1/-/COgAUR-8', width='100%', height='100%', frameborder='0', allowfullscreen='true', style='position:relative;')
+                    a(href='https://yandex.ru/maps/191/bryansk/house/bezhitskaya_ulitsa_54/Z00YdQNpQEYEQFtpfX52cn5hYg==/?ll=34.349932%2C53.273227&sll=34.363731%2C53.243325&sspn=0.246506%2C0.088351&utm_medium=mapframe&utm_source=maps&z=17.17', style='color:#eee;font-size:12px;position:absolute;top:14px;') Бежицкая улица, 54 — Яндекс.Карты
+                    iframe(src='https://yandex.ru/map-widget/v1/-/CODsVQ6c', width='100%', height='100%', frameborder='0', allowfullscreen='true', style='position:relative;')
+
             ._map-wrap(data-city='Москва')
                 div(style='position:relative;overflow:hidden;')
                     a(href='https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps', style='color:#eee;font-size:12px;position:absolute;top:0px;') Москва
