--- a/dev/static/styles/modules/contacts-page.sass
+++ b/dev/static/styles/modules/contacts-page.sass
@@ -20,6 +20,10 @@
     line-height: 40px
     &:hover, &:focus
         text-decoration: underline
+    +xs-block()
+        font-size: 20px
+        line-height: 27px
+        font-weight: bold
 
 .contacts-page__phone-wrap
     display: flex
@@ -35,6 +39,10 @@
     margin-right: 5px
     &:hover, &:focus
         text-decoration: underline
+    +xs-block()
+        font-size: 20px
+        line-height: 27px
+        font-weight: bold
 
 .contacts-page__phone-icon
     width: 40px
@@ -57,6 +65,10 @@
     margin-top: 48px
     margin-bottom: 41px
     display: none
+    +xs-block()
+        font-size: 20px
+        line-height: 27px
+        font-weight: bold
 
 .contacts-page__address--active
     display: block
