--- a/dev/static/styles/modules/modules.sass
+++ b/dev/static/styles/modules/modules.sass
@@ -15,6 +15,9 @@
         font-size: 110px
         line-height: 125px
         font-weight: 500
+        +xs-block()
+            font-size: 30px
+            line-height: 40px
 
 
 // Badges
